# mnemefusion

./: .gitignore  CHANGELOG.md  CI_CD.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  LANGUAGE_SUPPORT.md  LICENSE-APACHE  PERFORMANCE.md  PROFILING_RESULTS.md  PROJECT_STATE.md  README.md  SECURITY.md  SPRINT14_BASELINE_ANALYSIS.md  SPRINT_15_5_SUMMARY.md  SPRINT_16_1_SUMMARY.md  SPRINT_16_2_SUMMARY.md  SPRINT_16_3_SUMMARY.md  SPRINT_16_4_ANALYSIS.md  SPRINT_16_4_ROOT_CAUSE.md  SPRINT_16_FINDINGS.md  SPRINT_16_REDESIGN.md  VALIDATION_RESULTS.md  debug_extraction.py  debug_retrieval.py  mnemefusion_competitive_analysis.md  mnemefusion_cuda_wrapper.py  mnemefusion_feature_roadmap.md  mnemefusion_project_brief.md  mnemefusion_technical_architecture.md  test_entity_extract.py
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  benchmark.yml  ci.yml  release.yml  test.yml  test.yml.disabled
apps/: README.md  chat_demo.py
evals/: README.md
evals/locomo/: README.md  benchmark_log_prod_flow.txt  run_eval.py  run_eval_atomized.py
evals/longmemeval/: README.md  analyze_failures.py  build_slim_dataset.py  diagnostic_evidence_positions.py  diagnostic_evidence_recheck.py  diagnostic_lost_evidence.py  merge_bim_dbs.py  run_eval.py  run_ingest_atomic.py  run_mnemebench.py  run_query_bim.py  trace_analysis_v7.md
evals/longmemeval/analysis_s76/: query_results.json  query_traces.jsonl
examples/: minimal.py
mnemefusion-core/: Cargo.toml  build.rs
mnemefusion-core/benches/: core_operations.rs  profiling.rs
mnemefusion-core/examples/: basic_usage.rs  debug_extraction.rs  test_llm_extraction.rs
mnemefusion-core/src/: config.rs  error.rs  lib.rs  memory.rs  trace.rs
mnemefusion-core/src/embedding/: engine.rs  mod.rs
mnemefusion-core/src/extraction/: extractor.rs  mod.rs  output.rs  prompt.rs  triplex.rs
mnemefusion-core/src/graph/: causal.rs  entity.rs  mod.rs  persist.rs
mnemefusion-core/src/index/: bm25.rs  mod.rs  temporal.rs  vector.rs
mnemefusion-core/src/inference/: engine.rs  grammar.rs  mod.rs
mnemefusion-core/src/ingest/: causal_extractor.rs  entity_extractor.rs  mod.rs  pipeline.rs  slm_extractor.rs  temporal_extractor.rs
mnemefusion-core/src/query/: aggregator.rs  fusion.rs  graph_traversal.rs  intent.rs  mod.rs  planner.rs  profile_search.rs  reranker.rs
mnemefusion-core/src/slm/: MANUAL_SETUP.md  QUICKSTART.md  README.md  classifier.rs  config.rs  mod.rs  tests.rs
mnemefusion-core/src/storage/: engine.rs  format.rs  mod.rs
mnemefusion-core/src/types/: batch.rs  dedup.rs  entity.rs  filter.rs  memory.rs  mod.rs  profile.rs  source.rs  timestamp.rs
mnemefusion-core/src/util/: hash.rs  mod.rs
mnemefusion-core/tests/: custom.rs  integration_test.rs  property_tests.rs
mnemefusion-core/tests/custom/: causal_tests.rs  entity_tests.rs  fusion_tests.rs  intent_tests.rs  mod.rs  temporal_tests.rs  test_data_format.md  test_utils.rs
mnemefusion-python/: Cargo.toml  README.md  build.rs  pyproject.toml
mnemefusion-python/examples/: basic_usage.py
mnemefusion-python/mnemefusion/: __init__.py
mnemefusion-python/src/: lib.rs
mnemefusion-python/tests/: __init__.py  test_mnemefusion.py
scripts/: apply_patches.py  backfill_kg.py  convert_to_onnx.py  fix_linux_wheel.sh  pod_setup.sh  rebuild_remote.bat  run_backfill.bat  run_benchmarks.sh  run_eval_kg.bat  setup_linux.sh  slm_classify.py  slm_classify_server.py  slm_extract_server.py  start_backfill_task.py  start_eval_task.py
tests/benchmarks/: README.md  ablation_study.py  analyze_locomo_categories.py  debug_4d_regression.py  debug_query.py  debug_query_detailed.py  debug_temporal.py  diagnostic_s24.py  diagnostic_s24_deep.py  failure_analysis.py  hotpotqa_eval.py  industry_eval.py  kg_evidence.py  kg_smoke_test.py  locomo_eval.py  longmemeval_eval.py  manual_intent_overrides.json  nearmiss_analysis.py  phi4_extraction_test.py  requirements.txt  retrieval_analysis.py  score_breakdown.py  sprint_18_actual_results.md  sprint_18_locomo_results.json  sprint_18_longmemeval_results.json  sprint_18_summary.json  test_temporal_content.py  trace_fusion.py  trace_fusion2.py  validation_eval.py  validation_eval_slm.py  validation_phase4.py
tests/benchmarks/fixtures/: hotpotqa_phase1_4d_results.json  hotpotqa_phase1_results.json  hotpotqa_phase2_4d_improved.json  hotpotqa_phase2_4d_results.json  hotpotqa_phase2_results.json  industry_eval_baseline_200.json  industry_eval_full.json  industry_eval_phase3_results.json  industry_eval_phase3_slm_results.json  industry_eval_qwen3_100.json  industry_eval_test.json  locomo_phase1_results.json  locomo_phase2_4d_improved.json  locomo_phase2_4d_results.json  locomo_phase2_4d_results_fixed.json  locomo_phase2_results.json  locomo_phase2_signal_quality.json  locomo_phase2_temporal_improved.json  locomo_phase2_temporal_relevance.json  longmemeval_oracle_results.json  phase4_baseline.json  phase4_sample1.json  phase4_test.json  phi4_vs_qwen_extraction.json  session15_reingest_results.json  session15_synth_v4_results.json  session19_consolidation.json  sprint_17_summary.json
