[workspace]
members = [
    "mnemefusion-core",
    "mnemefusion-python",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["George K."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gkanellopoulos/mnemefusion"

[workspace.dependencies]
# Storage
redb = "2.1"

# Vector search (HNSW) — disable simsimd (GCC 11 build failure on _mm512_reduce_add_ph)
usearch = { version = "=2.23.0", default-features = false, features = ["fp16lib"] }

# Graph algorithms
petgraph = "0.6"

# Serialization
rkyv = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"

# Regex for intent classification
regex = "1.10"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

