[package]
name = "mnemefusion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified memory engine for AI applications - Core library"
keywords = ["ai", "memory", "vector", "database", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
redb = { workspace = true }
usearch = { workspace = true }
petgraph = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

# SLM dependencies (optional feature)
# Using Python subprocess for llama.cpp inference (simpler than native bindings)
tracing = "0.1"

# BM25 stemming for better keyword matching
rust-stemmers = "1.2"

[features]
default = []
slm = []

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
proptest = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sprint 14: Performance benchmarks
[[bench]]
name = "core_operations"
harness = false

[[bench]]
name = "profiling"
harness = false
