[package]
name = "mnemefusion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified memory engine for AI applications - Core library"
keywords = ["ai", "memory", "vector", "database", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
redb = { workspace = true }
usearch = { workspace = true }
petgraph = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "6.0"

# Structured logging
tracing = "0.1"

# BM25 stemming for better keyword matching
rust-stemmers = "1.2"

# Native LLM inference for entity extraction (optional)
llama-cpp-2 = { version = "0.1", optional = true }
llama-cpp-sys-2 = { version = "0.1", optional = true }

# ONNX embedding model via fastembed (optional)
# Windows note: requires pre-built ONNX Runtime. Set ORT_LIB_LOCATION or use load-dynamic.
# On Linux/Mac builds from source automatically.
fastembed = { version = "4", optional = true }

[features]
default = []
slm = []
entity-extraction = ["llama-cpp-2", "llama-cpp-sys-2"]
entity-extraction-dynamic = ["entity-extraction", "llama-cpp-2/dynamic-link"]
entity-extraction-cuda = ["entity-extraction-dynamic", "llama-cpp-2/cuda"]
embedding-onnx = ["fastembed"]

[dev-dependencies]
tempfile = "3.10"
criterion = "0.8"
proptest = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "core_operations"
harness = false

[[bench]]
name = "profiling"
harness = false
