[package]
name = "mnemefusion-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "mnemefusion"
crate-type = ["cdylib"]

[dependencies]
mnemefusion-core = { path = "../mnemefusion-core" }
pyo3 = { version = "0.20", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
