[package]
name = "mnemefusion-python"
version = "0.1.0"
edition = "2021"
authors = ["George K."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gkanellopoulos/mnemefusion"
description = "Python bindings for MnemeFusion — unified memory engine for AI applications"

[lib]
name = "mnemefusion"
crate-type = ["cdylib"]

[dependencies]
mnemefusion-core = { path = "../mnemefusion-core" }
pyo3 = { version = "0.20", features = ["extension-module"] }

[features]
# Pass through the slm feature to mnemefusion-core
slm = ["mnemefusion-core/slm"]
# Pass through the entity-extraction feature for native LLM extraction (static linking)
entity-extraction = ["mnemefusion-core/entity-extraction"]
# Entity extraction with dynamic backend loading (for local dev with DLLs)
entity-extraction-dynamic = ["entity-extraction", "mnemefusion-core/entity-extraction-dynamic"]
# Entity extraction with CUDA GPU acceleration (requires dynamic backends)
entity-extraction-cuda = ["entity-extraction-dynamic", "mnemefusion-core/entity-extraction-cuda"]
# ONNX embedding model (fastembed) — automatic text vectorization
embedding-onnx = ["mnemefusion-core/embedding-onnx"]
# Everything: CUDA entity extraction + ONNX embedding
full = ["entity-extraction-cuda", "embedding-onnx"]

[profile.release]
lto = true
codegen-units = 1
